maven sufire plugin added

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,326</td><td>smoke</td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,057</td><td>smoke</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Google_Page.FirstPage</td><td><a href="#m0">test</a></td><td rowspan="1">1634289583888</td><td rowspan="1">2795</td></tr><tr class="passedeven"><td><a href="#m1">testsuccess</a></td><td rowspan="1">1634289580274</td><td rowspan="1">16</td></tr><tr class="passedodd"><td rowspan="1">Google_Test.NewTest</td><td><a href="#m2">googlelaunch</a></td><td rowspan="1">1634289576704</td><td rowspan="1">15</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Google_Test.NewTest</td><td><a href="#m0">googlelaunch</a></td><td rowspan="1">1634368026374</td><td rowspan="1">28</td></tr><tr class="passedodd"><td rowspan="2">Google_Test.google</td><td><a href="#m1">test</a></td><td rowspan="1">1634368034946</td><td rowspan="1">3512</td></tr><tr class="passedodd"><td><a href="#m2">testsuccess</a></td><td rowspan="1">1634368031714</td><td rowspan="1">5</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">Google_Page.FirstPage#test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Google_Page.FirstPage#testsuccess</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Google_Test.NewTest#googlelaunch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">Google_Test.NewTest#googlelaunch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Google_Test.google#test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Google_Test.google#testsuccess</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
