--- a/test-output/index.html
+++ b/test-output/index.html
@@ -109,12 +109,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Google_Page.FirstPage" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="Google_Test.google" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Google_Page.FirstPage" class="method navigator-link" hash-for-method="testsuccess">testsuccess</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="Google_Test.google" class="method navigator-link" hash-for-method="testsuccess">testsuccess</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -147,7 +147,7 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Google_Page.FirstPage</span>
+              <span class="class-name">Google_Test.google</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -184,7 +184,7 @@
     &lt;/groups&gt;
     &lt;classes&gt;
       &lt;class name=&quot;Google_Test.NewTest&quot;/&gt;
-      &lt;class name=&quot;Google_Page.FirstPage&quot;/&gt;
+      &lt;class name=&quot;Google_Test.google&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -243,21 +243,21 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test')
-data.setCell(0, 2, 'Google_Page.FirstPage')
-data.setCell(0, 3, 2795);
+data.setCell(0, 2, 'Google_Test.google')
+data.setCell(0, 3, 3512);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testsuccess')
-data.setCell(1, 2, 'Google_Page.FirstPage')
-data.setCell(1, 3, 16);
+data.setCell(1, 1, 'googlelaunch')
+data.setCell(1, 2, 'Google_Test.NewTest')
+data.setCell(1, 3, 28);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'googlelaunch')
-data.setCell(2, 2, 'Google_Test.NewTest')
-data.setCell(2, 3, 15);
+data.setCell(2, 1, 'testsuccess')
+data.setCell(2, 2, 'Google_Test.google')
+data.setCell(2, 3, 5);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -290,30 +290,30 @@ return data;
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">Google_Page.FirstPage</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Google_Test.google</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">28 ms</span>
+                <span class="method-start">57 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testsuccess</span>
-                <span class="method-start">3570 ms</span>
+                <span class="method-start">5340 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">close</span>
-                <span class="method-start">3600 ms</span>
+                <span class="method-start">5348 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">4772 ms</span>
+                <span class="method-start">6324 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test</span>
-                <span class="method-start">7184 ms</span>
+                <span class="method-start">8572 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">close</span>
-                <span class="method-start">9982 ms</span>
+                <span class="method-start">12086 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
