--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="919fcc">  <td>21/10/15 14:49:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FirstPage.close()[pri:0, instance:Google_Page.FirstPage@57af006c]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@2067180044</td>   <td></td> </tr>
-<tr bgcolor="919fcc">  <td>21/10/15 14:49:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FirstPage.close()[pri:0, instance:Google_Page.FirstPage@57af006c]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@2067180044</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/10/15 14:49:36</td>   <td>-9984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.googlelaunch()[pri:0, instance:Google_Test.NewTest@66498326]">googlelaunch</td> 
-  <td>main@2067180044</td>   <td></td> </tr>
-<tr bgcolor="919fcc">  <td>21/10/15 14:49:41</td>   <td>-5209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FirstPage.setup()[pri:0, instance:Google_Page.FirstPage@57af006c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2067180044</td>   <td></td> </tr>
-<tr bgcolor="919fcc">  <td>21/10/15 14:49:41</td>   <td>-5209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FirstPage.setup()[pri:0, instance:Google_Page.FirstPage@57af006c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2067180044</td>   <td></td> </tr>
-<tr bgcolor="919fcc">  <td>21/10/15 14:49:43</td>   <td>-2798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstPage.test()[pri:-2, instance:Google_Page.FirstPage@57af006c]">test</td> 
-  <td>main@2067180044</td>   <td></td> </tr>
-<tr bgcolor="919fcc">  <td>21/10/15 14:49:40</td>   <td>-6412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstPage.testsuccess()[pri:-5, instance:Google_Page.FirstPage@57af006c]">testsuccess</td> 
-  <td>main@2067180044</td>   <td></td> </tr>
+<tr bgcolor="677d7f">  <td>21/10/16 12:37:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;google.close()[pri:0, instance:Google_Test.google@5562c41e]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@1776374725</td>   <td></td> </tr>
+<tr bgcolor="677d7f">  <td>21/10/16 12:37:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;google.close()[pri:0, instance:Google_Test.google@5562c41e]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@1776374725</td>   <td></td> </tr>
+<tr bgcolor="bb89bb">  <td>21/10/16 12:37:06</td>   <td>-12091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.googlelaunch()[pri:0, instance:Google_Test.NewTest@4d5b6aac]">googlelaunch</td> 
+  <td>main@1776374725</td>   <td></td> </tr>
+<tr bgcolor="677d7f">  <td>21/10/16 12:37:12</td>   <td>-5763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;google.setup()[pri:0, instance:Google_Test.google@5562c41e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1776374725</td>   <td></td> </tr>
+<tr bgcolor="677d7f">  <td>21/10/16 12:37:12</td>   <td>-5763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;google.setup()[pri:0, instance:Google_Test.google@5562c41e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1776374725</td>   <td></td> </tr>
+<tr bgcolor="677d7f">  <td>21/10/16 12:37:14</td>   <td>-3516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="google.test()[pri:-2, instance:Google_Test.google@5562c41e]">test</td> 
+  <td>main@1776374725</td>   <td></td> </tr>
+<tr bgcolor="677d7f">  <td>21/10/16 12:37:11</td>   <td>-6747</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="google.testsuccess()[pri:-5, instance:Google_Test.google@5562c41e]">testsuccess</td> 
+  <td>main@1776374725</td>   <td></td> </tr>
 </table>
