added sufireplugin and moved test to src/test/java and renamed to Test.java

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,8 +11,19 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>launch2</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>launch</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>googlelaunch</td>
-<td>&nbsp;</td></tr>
+<td>smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
