--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,22 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="Google_Test.other_test" class="method navigator-link" hash-for-method="CheckTest">CheckTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="Google_Test.NewTest" class="method navigator-link" hash-for-method="googlelaunch">googlelaunch</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="Google_Test.NewTest" class="method navigator-link" hash-for-method="launch">launch</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="Google_Test.NewTest" class="method navigator-link" hash-for-method="launch2">launch2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -132,14 +147,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Google_Test.NewTest</span>
+              <span class="class-name">Google_Test.other_test</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="googlelaunch">
-                  </a> <!-- googlelaunch -->
-                  <span class="method-name">googlelaunch</span>
+                  <a name="CheckTest">
+                  </a> <!-- CheckTest -->
+                  <span class="method-name">CheckTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -166,6 +181,35 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">Google_Test.NewTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="googlelaunch">
+                  </a> <!-- googlelaunch -->
+                  <span class="method-name">googlelaunch</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="launch">
+                  </a> <!-- launch -->
+                  <span class="method-name">launch</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="launch2">
+                  </a> <!-- launch2 -->
+                  <span class="method-name">launch2</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -183,8 +227,9 @@
       &lt;/run&gt;
     &lt;/groups&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Google_Test.NewTest&quot;/&gt;
       &lt;class name=&quot;Google_Test.google&quot;/&gt;
+      &lt;class name=&quot;Google_Test.NewTest&quot;/&gt;
+      &lt;class name=&quot;Google_Test.other_test&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -198,7 +243,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (2 classes)</span>
+                <span class="test-name">Test (3 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -212,7 +257,19 @@
               <span class="test-group-name">smoke</span>
               <br/>
               <div class="method-in-group">
+                <span class="method-in-group-name">CheckTest</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
                 <span class="method-in-group-name">googlelaunch</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">launch</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">launch2</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
@@ -240,24 +297,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'test')
-data.setCell(0, 2, 'Google_Test.google')
-data.setCell(0, 3, 3512);
+data.setCell(0, 1, 'launch2')
+data.setCell(0, 2, 'Google_Test.NewTest')
+data.setCell(0, 3, 7145);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'googlelaunch')
-data.setCell(1, 2, 'Google_Test.NewTest')
-data.setCell(1, 3, 28);
+data.setCell(1, 1, 'test')
+data.setCell(1, 2, 'Google_Test.google')
+data.setCell(1, 3, 2800);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testsuccess')
 data.setCell(2, 2, 'Google_Test.google')
-data.setCell(2, 3, 5);
+data.setCell(2, 3, 22);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'launch')
+data.setCell(3, 2, 'Google_Test.NewTest')
+data.setCell(3, 3, 3);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'CheckTest')
+data.setCell(4, 2, 'Google_Test.other_test')
+data.setCell(4, 3, 3);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'googlelaunch')
+data.setCell(5, 2, 'Google_Test.NewTest')
+data.setCell(5, 3, 2);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -283,38 +352,53 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Google_Test.NewTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">googlelaunch</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
               <div class="chronological-class-name">Google_Test.google</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">57 ms</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testsuccess</span>
-                <span class="method-start">5340 ms</span>
+                <span class="method-start">4168 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">close</span>
-                <span class="method-start">5348 ms</span>
+                <span class="method-start">4202 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">6324 ms</span>
+                <span class="method-start">5233 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test</span>
-                <span class="method-start">8572 ms</span>
+                <span class="method-start">6965 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">close</span>
-                <span class="method-start">12086 ms</span>
+                <span class="method-start">9768 ms</span>
               </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Google_Test.NewTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">googlelaunch</span>
+                <span class="method-start">10775 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">launch</span>
+                <span class="method-start">10781 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">launch2</span>
+                <span class="method-start">10787 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Google_Test.other_test</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">CheckTest</span>
+                <span class="method-start">17940 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
