--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="77fd62">  <td>21/10/14 20:40:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.googlelaunch()[pri:0, instance:Google_Test.NewTest@3d1cfad4]">googlelaunch</td> 
-  <td>main@103103526</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>21/10/16 13:40:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.googlelaunch()[pri:0, instance:Google_Test.NewTest@4de4b452]">googlelaunch</td> 
+  <td>main@1158258131</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>21/10/16 13:40:24</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.launch()[pri:0, instance:Google_Test.NewTest@4de4b452]">launch</td> 
+  <td>main@1158258131</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>21/10/16 13:40:24</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.launch2()[pri:0, instance:Google_Test.NewTest@4de4b452]">launch2</td> 
+  <td>main@1158258131</td>   <td></td> </tr>
 </table>
