--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -49,7 +49,40 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>launch2</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>launch</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>googlelaunch</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>Google_Test.other_test</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CheckTest</td>
 <td>smoke </td>
 </tr>
 <tr>
