--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoke</td><td>google.testsuccess()[pri:-5, instance:Google_Test.google@5562c41e]<br/>google.test()[pri:-2, instance:Google_Test.google@5562c41e]<br/>NewTest.googlelaunch()[pri:0, instance:Google_Test.NewTest@4d5b6aac]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoke</td><td>NewTest.launch2()[pri:0, instance:Google_Test.NewTest@1de76cc7]<br/>google.testsuccess()[pri:-5, instance:Google_Test.google@fa49800]<br/>google.test()[pri:-2, instance:Google_Test.google@fa49800]<br/>other_test.CheckTest()[pri:0, instance:Google_Test.other_test@54bff557]<br/>NewTest.googlelaunch()[pri:0, instance:Google_Test.NewTest@1de76cc7]<br/>NewTest.launch()[pri:0, instance:Google_Test.NewTest@1de76cc7]<br/></td></tr>
 </table>
