new class added

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,16 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,000</td><td>smoke</td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,428</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Google_Test.NewTest</td><td><a href="#m0">googlelaunch</a></td><td rowspan="1">1634374641863</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m1">launch</a></td><td rowspan="1">1634374641869</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m2">launch2</a></td><td rowspan="1">1634374641875</td><td rowspan="1">7145</td></tr><tr class="passedodd"><td rowspan="2">Google_Test.google</td><td><a href="#m3">test</a></td><td rowspan="1">1634374638053</td><td rowspan="1">2800</td></tr><tr class="passedodd"><td><a href="#m4">testsuccess</a></td><td rowspan="1">1634374635256</td><td rowspan="1">22</td></tr><tr class="passedeven"><td rowspan="1">Google_Test.other_test</td><td><a href="#m5">CheckTest</a></td><td rowspan="1">1634374649028</td><td rowspan="1">3</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Google_Test.googleTest</td><td><a href="#m0">launchwebsite</a></td><td rowspan="1">1634396681520</td><td rowspan="1">3348</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">Google_Test.NewTest#googlelaunch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Google_Test.NewTest#launch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Google_Test.NewTest#launch2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Google_Test.google#test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">Google_Test.google#testsuccess</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">Google_Test.other_test#CheckTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Google_Test.googleTest#launchwebsite</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
