--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoke</td><td>NewTest.launch2()[pri:0, instance:Google_Test.NewTest@4de4b452]<br/>NewTest.googlelaunch()[pri:0, instance:Google_Test.NewTest@4de4b452]<br/>NewTest.launch()[pri:0, instance:Google_Test.NewTest@4de4b452]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
