--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e8896b">  <td>21/10/16 13:40:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.googlelaunch()[pri:0, instance:Google_Test.NewTest@4de4b452]">googlelaunch</td> 
-  <td>main@1158258131</td>   <td></td> </tr>
-<tr bgcolor="e8896b">  <td>21/10/16 13:40:24</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.launch()[pri:0, instance:Google_Test.NewTest@4de4b452]">launch</td> 
-  <td>main@1158258131</td>   <td></td> </tr>
-<tr bgcolor="e8896b">  <td>21/10/16 13:40:24</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.launch2()[pri:0, instance:Google_Test.NewTest@4de4b452]">launch2</td> 
-  <td>main@1158258131</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>21/10/16 20:34:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="googleTest.launchwebsite()[pri:0, instance:Google_Test.googleTest@7bd4937b]">launchwebsite</td> 
+  <td>main@806511723</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>21/10/16 20:34:29</td>   <td>-11973</td> <td title="&gt;&gt;googleTest.setup()[pri:0, instance:Google_Test.googleTest@7bd4937b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@806511723</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>21/10/16 20:34:44</td>   <td>3467</td> <td title="&lt;&lt;googleTest.teardown()[pri:0, instance:Google_Test.googleTest@7bd4937b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@806511723</td>   <td></td> </tr>
 </table>
