--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Google_Test.google</td>
+<td>Google_Test.googleTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,23 +12,16 @@
 <tr>
 <td>&nbsp;</td>
 <td>test</td>
-<td>smoke </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>testsuccess</td>
-<td>smoke </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>setup</td>
-<td>smoke </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
@@ -49,19 +42,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>launch2</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>launch</td>
-<td>smoke </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>googlelaunch</td>
-<td>smoke </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -75,7 +61,7 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>Google_Test.other_test</td>
+<td>Google_Test.otherTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -83,8 +69,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>CheckTest</td>
-<td>smoke </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
