--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,24 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ab778a">  <td>21/10/16 14:27:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="other_test.CheckTest()[pri:0, instance:Google_Test.other_test@54bff557]">CheckTest</td> 
-  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="909dad">  <td>21/10/16 14:27:20</td>   <td>-8172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;google.close()[pri:0, instance:Google_Test.google@fa49800]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="909dad">  <td>21/10/16 14:27:20</td>   <td>-8172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;google.close()[pri:0, instance:Google_Test.google@fa49800]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>21/10/16 14:27:21</td>   <td>-7165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.googlelaunch()[pri:0, instance:Google_Test.NewTest@1de76cc7]">googlelaunch</td> 
-  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>21/10/16 14:27:21</td>   <td>-7159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.launch()[pri:0, instance:Google_Test.NewTest@1de76cc7]">launch</td> 
-  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>21/10/16 14:27:21</td>   <td>-7153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.launch2()[pri:0, instance:Google_Test.NewTest@1de76cc7]">launch2</td> 
-  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="909dad">  <td>21/10/16 14:27:16</td>   <td>-12706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;google.setup()[pri:0, instance:Google_Test.google@fa49800]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="909dad">  <td>21/10/16 14:27:16</td>   <td>-12706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;google.setup()[pri:0, instance:Google_Test.google@fa49800]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="909dad">  <td>21/10/16 14:27:18</td>   <td>-10975</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="google.test()[pri:-2, instance:Google_Test.google@fa49800]">test</td> 
-  <td>main@1042790962</td>   <td></td> </tr>
-<tr bgcolor="909dad">  <td>21/10/16 14:27:15</td>   <td>-13773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="google.testsuccess()[pri:-5, instance:Google_Test.google@fa49800]">testsuccess</td> 
-  <td>main@1042790962</td>   <td></td> </tr>
+<tr bgcolor="aceffd">  <td>21/10/16 16:27:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="otherTest.CheckTest()[pri:0, instance:Google_Test.otherTest@5f4d427e]">CheckTest</td> 
+  <td>main@95322593</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>21/10/16 16:27:44</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;googleTest.close()[pri:0, instance:Google_Test.googleTest@2ce86164]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@95322593</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>21/10/16 16:27:44</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;googleTest.close()[pri:0, instance:Google_Test.googleTest@2ce86164]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@95322593</td>   <td></td> </tr>
+<tr bgcolor="a487af">  <td>21/10/16 16:27:44</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.googlelaunch()[pri:0, instance:Google_Test.NewTest@37f21974]">googlelaunch</td> 
+  <td>main@95322593</td>   <td></td> </tr>
+<tr bgcolor="a487af">  <td>21/10/16 16:27:44</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.launch()[pri:0, instance:Google_Test.NewTest@37f21974]">launch</td> 
+  <td>main@95322593</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>21/10/16 16:27:41</td>   <td>-3969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="googleTest.test()[pri:0, instance:Google_Test.googleTest@2ce86164]">test</td> 
+  <td>main@95322593</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>21/10/16 16:27:44</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="googleTest.testsuccess()[pri:0, instance:Google_Test.googleTest@2ce86164]">testsuccess</td> 
+  <td>main@95322593</td>   <td></td> </tr>
 </table>
