made changes in framework

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\91994\AppData\Local\Temp\testng-eclipse--964862951\testng-customsuite.xml</span>
+                    <span>C:\Users\91994\AppData\Local\Temp\testng-eclipse-2071855016\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Google_Test.googleTest" class="method navigator-link" hash-for-method="launchwebsite">launchwebsite</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Google_Test.NewTest" class="method navigator-link" hash-for-method="launchwebsite">launchwebsite</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Google_Test.NewTest" class="method navigator-link" hash-for-method="womenstab">womenstab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,7 +127,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Google_Test.googleTest</span>
+              <span class="class-name">Google_Test.NewTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -132,12 +137,19 @@
                   <span class="method-name">launchwebsite</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="womenstab">
+                  </a> <!-- womenstab -->
+                  <span class="method-name">womenstab</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\91994\AppData\Local\Temp\testng-eclipse--964862951\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\91994\AppData\Local\Temp\testng-eclipse-2071855016\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +158,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Google_Test.googleTest&quot;/&gt;
+      &lt;class name=&quot;Google_Test.NewTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,16 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'launchwebsite')
-data.setCell(0, 2, 'Google_Test.googleTest')
-data.setCell(0, 3, 3518);
+data.setCell(0, 1, 'womenstab')
+data.setCell(0, 2, 'Google_Test.NewTest')
+data.setCell(0, 3, 5273);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'launchwebsite')
+data.setCell(1, 2, 'Google_Test.NewTest')
+data.setCell(1, 3, 3486);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,18 +237,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Google_Test.googleTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Google_Test.NewTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">launchwebsite</span>
-                <span class="method-start">12944 ms</span>
+                <span class="method-start">14782 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">womenstab</span>
+                <span class="method-start">18276 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">16616 ms</span>
+                <span class="method-start">23690 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
