--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7277dc">  <td>21/10/17 21:42:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="googleTest.launchwebsite()[pri:0, instance:Google_Test.googleTest@7bd4937b]">launchwebsite</td> 
-  <td>main@806511723</td>   <td></td> </tr>
-<tr bgcolor="7277dc">  <td>21/10/17 21:42:45</td>   <td>3672</td> <td title="&lt;&lt;googleTest.teardown()[pri:0, instance:Google_Test.googleTest@7bd4937b]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@806511723</td>   <td></td> </tr>
-<tr bgcolor="7277dc">  <td>21/10/17 21:42:29</td>   <td>-12936</td> <td title="&gt;&gt;googleTest.setup()[pri:0, instance:Google_Test.googleTest@7bd4937b]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@806511723</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>21/10/17 22:16:34</td>   <td>0</td> <td title="&lt;&lt;RunnerTest.teardown()[pri:0, instance:Google_Test.NewTest@5ba3f27a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>21/10/17 22:16:25</td>   <td>-8909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.launchwebsite()[pri:0, instance:Google_Test.NewTest@5ba3f27a]">launchwebsite</td> 
+  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>21/10/17 22:16:29</td>   <td>-5415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.womenstab()[pri:0, instance:Google_Test.NewTest@5ba3f27a]">womenstab</td> 
+  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>21/10/17 22:16:10</td>   <td>-23679</td> <td title="&gt;&gt;RunnerTest.setup()[pri:0, instance:Google_Test.NewTest@5ba3f27a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
 </table>
